Add the cdk construct for the graph-mutation-service

--- a/src/rust/Dockerfile
+++ b/src/rust/Dockerfile
@@ -95,31 +95,6 @@ RUN mkdir -p /grapl/zips; \
     grapl-zip metric-forwarder
 
 
-<<<<<<< HEAD
-# build test stages
-################################################################################
-FROM build AS build-test-unit
-
-RUN --mount=type=cache,mode=0777,target=/root/.cache/sccache \
-    --mount=type=cache,mode=0777,target=/usr/local/cargo/registry \
-    --mount=type=secret,id=rust_env,dst=/grapl/env \
-    source /grapl/env; \
-    cargo test --no-run
-
-
-FROM build AS build-test-integration
-
-RUN --mount=type=cache,mode=0777,target=/root/.cache/sccache \
-    --mount=type=cache,mode=0777,target=/usr/local/cargo/registry \
-    --mount=type=secret,id=rust_env,dst=/grapl/env \
-    source /grapl/env; \
-    cargo test --manifest-path node-identifier/Cargo.toml --features integration --no-run; \
-    cargo test --manifest-path graph-merger/Cargo.toml --features integration --no-run; \
-    cargo test --manifest-path graph-mutation-service/Cargo.toml --features integration --no-run
-
-
-=======
->>>>>>> main
 # images for running services
 ################################################################################
 FROM debian:buster-slim AS rust-dist
@@ -149,21 +124,12 @@ FROM rust-dist AS graph-merger-deploy
 COPY --from=build /dist/graph-merger /
 CMD ["/graph-merger"]
 
-<<<<<<< HEAD
 # graph-mutation-service
 FROM rust-dist AS graph-mutation-service-deploy
 
-COPY --from=build "/grapl/rust/target/${CARGO_PROFILE}/graph-mutation-service" /
+COPY --from=build "/dist/graph-mutation-service" /
 CMD ["/graph-mutation-service"]
 
-# metric-forwarder
-FROM rust-dist AS metric-forwarder-deploy
-
-COPY --from=build "/grapl/rust/target/${CARGO_PROFILE}/metric-forwarder" /
-CMD ["/metric-forwarder"]
-
-=======
->>>>>>> main
 # node-identifier
 FROM rust-dist AS node-identifier-deploy
 
