Remove some unused deps

--- a/src/rust/graph-descriptions/Cargo.toml
+++ b/src/rust/graph-descriptions/Cargo.toml
@@ -35,4 +35,7 @@ tracing-subscriber = "0.2"
 
 [features]
 default = []
-extra_assertions = []
+
+
+[package.metadata.cargo-udeps.ignore]
+build=["uuid"]
