--- a/local-grapl.env
+++ b/local-grapl.env
@@ -72,6 +72,7 @@ GRAPL_GRAPHQL_HOST=graphql.grapl.test
 # only for usage within the Docker Compose network.
 ########################################################################
 
+REDIS_ENDPOINT=redis://${REDIS_HOST}:${REDIS_PORT}
 GRAPH_MUTATION_ENDPOINT=http://${GRAPH_MUTATION_HOST}:${GRAPH_MUTATION_PORT}
 
 # The remaining endpoints are all just aliases for our unified
