--- a/src/python/Dockerfile
+++ b/src/python/Dockerfile
@@ -257,6 +257,25 @@ RUN source venv/bin/activate && \
     pip install .
 
 
+# test
+FROM grapl-ux-router-build AS grapl-ux-router-test
+
+ENV IS_LOCAL=True
+ENV DEPLOYMENT_NAME=local-grapl
+ENV UX_BUCKET_URL="ux_bucket_url"
+
+## Install test requirements
+COPY --chown=grapl --from=python-test-deps /home/grapl/python_test_deps python_test_deps
+RUN python_test_deps/install_requirements.sh
+
+## Steal and install grapl-tests-common
+COPY --chown=grapl python/grapl-tests-common grapl-tests-common
+RUN source venv/bin/activate && \
+    cd grapl-tests-common && \
+    pip install .
+
+
+
 # dgraph-ttl
 ################################################################################
 
