--- a/src/rust/node-identifier/Cargo.toml
+++ b/src/rust/node-identifier/Cargo.toml
@@ -21,6 +21,7 @@ grapl-graph-descriptions = { path="../graph-descriptions", version="*"}
 grapl-config = {path="../grapl-config", version="*"}
 grapl-observe = {path="../grapl-observe", version="*"}
 grapl-service = {path="../grapl-service"}
+grapl-utils = {path = "../grapl-utils"}
 
 bytes = "1"
 failure = "0.1"
