--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -19,5 +19,6 @@ members = [
     "./sqs-executor",
     "./sysmon",
     "./grapl-service",
+    "./grapl-graphql-codegen",
     "./grapl-model-plugin-deployer",
 ]
