Getting started on dgraph in Pulumi
got started on iam policy stuff

Change to RolePolicyAttach

Add upload-stuff-to-buckets infra

simplify

Minor improvements still broken

some more fixes whatever

Get the file uploads right

IAM stuff works, s3 does not

formatting etc

Okay, i'm really frustrated tbh

HAHAHA IT COMPILED

getting closer

freaking apply dude

connectable closer to correct

Getting started on the Dgraph CLuster

Okay got SecurityGroupRule figured out

did it

finished out dgraph cluster

Move some stuff to consume dgraph cluster

--- a/Dockerfile.pulumi
+++ b/Dockerfile.pulumi
@@ -1,4 +1,4 @@
-FROM python:3.7-slim-buster as pants-base
+FROM python:3.7-slim-buster as grapl-local-pulumi
 
 SHELL ["/bin/bash", "-c"]
 
@@ -40,6 +40,10 @@ COPY --chown=grapl pyproject.toml pyproject.toml
 COPY --chown=grapl src/python/mypy.ini src/python/mypy.ini
 COPY --chown=grapl pants.toml pants.toml
 COPY --chown=grapl 3rdparty 3rdparty
+# Consumed as SWARM_INIT_DIR
+COPY --chown=grapl src/js/grapl-cdk/swarm src/js/grapl-cdk/swarm
+# Consumed as DGRAPH_CONFIG_DIR
+COPY --chown=grapl src/js/grapl-cdk/dgraph src/js/grapl-cdk/dgraph
 
 # To bootstrap Pants
 # We need to ignore both Pants' cache as well as our Pulumi venv in
