--- a/pulumi/Pulumi.local-grapl.yaml
+++ b/pulumi/Pulumi.local-grapl.yaml
@@ -9,6 +9,7 @@ config:
     ec2: http://localhost:4566
     iam: http://localhost:4566
     lambda: http://localhost:4566
+    route53: http://localhost:4566
     s3: http://localhost:4566
     secretsmanager: http://localhost:4566
     sns: http://localhost:4566
