--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -1,23 +1,24 @@
 [workspace]
-
 members = [
-    "./analyzer-dispatcher",
-    "./derive-dynamic-node",
-    "./endpoint-plugin",
-    "./graph-descriptions",
-    "./graph-merger",
-    "./grapl",
-    "./grapl-config",
-    "./grapl-utils",
-    "./grapl-observe",
-    "./metric-forwarder",
-    "./node-identifier",
-    "./generators/graph-generator-lib",
-    "./generators/generic-subgraph-generator",
-    "./generators/osquery-subgraph-generator",
-    "./generators/sysmon-subgraph-generator",
-    "./sqs-executor",
-    "./sysmon",
-    "./grapl-service",
-    "./graph-mutation-service",
+   "./analyzer-dispatcher",
+   "./derive-dynamic-node",
+   "./endpoint-plugin",
+   "./generators/generic-subgraph-generator",
+   "./generators/graph-generator-lib",
+   "./generators/osquery-subgraph-generator",
+   "./generators/sysmon-subgraph-generator",
+   "./graph-descriptions",
+   "./graph-merger",
+   "./graph-mutation-service",
+   "./grapl",
+   "./grapl-config",
+   "./grapl-model-plugin-deployer",
+   "./grapl-observe",
+   "./grapl-service",
+   "./grapl-utils",
+   "./metric-forwarder",
+   "./node-identifier",
+   "./sqs-executor",
+   "./sysmon",
+   "./test-rust-grpc",
 ]
