Remove VERSION. Remove dead comments and code. Use main mypy.ini. Remove unnecessary .dockerignore.

--- a/src/python/grapl-http-service/BUILD
+++ b/src/python/grapl-http-service/BUILD
@@ -4,7 +4,7 @@ grapl_python_distribution(
     ],
     provides = setup_py(
         name = "grapl-http-service",
-        version = "0.1.0", # TODO: remove VERSION file? Or read from it?
+        version = "0.1.0",
         description = "Library for building Grapl HTTP Services"
     )
 )
