--- a/src/python/mypy.ini
+++ b/src/python/mypy.ini
@@ -3,3 +3,17 @@
 warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = True
+
+[mypy-grapl-http-service]
+allow_redefinition = True
+disallow_any_generics = True
+disallow_incomplete_defs = True
+disallow_untyped_defs = True
+no_implicit_optional = True
+pretty = True
+show_error_context = True
+strict_equality = True
+warn_return_any = True
+warn_unreachable = True
+warn_unused_ignores = True
+
