--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -31,6 +31,7 @@ steps:
   - label: ":rust: rustfmt"
     command:
       - cd src/rust
+      - rustup set profile default
       - bin/format --check
 
   - label: ":rust: Linting"
