--- a/src/rust/grapl-model-plugin-deployer/Cargo.toml
+++ b/src/rust/grapl-model-plugin-deployer/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 
+[lib]
+name = "grapl_model_plugin_deployer_lib"
+path = "src/lib.rs"
+
 [[bin]]
 name = "grapl-model-plugin-deployer"
 path = "src/main.rs"
-
-[lib]
-name = "grapl_model_plugin_deployer"
-
 
 [dependencies]
 thiserror = "1"
