--- a/src/python/provisioner/provisioner/BUILD
+++ b/src/python/provisioner/provisioner/BUILD
@@ -1,7 +1,10 @@
-python_library()
+python_library(
+    sources=["*.py"]
+)
 
 python_awslambda(
     name="lambda",
     runtime="python3.7",
-    handler="./app.py:provision",
+    handler="./main.py:main",
+    dependencies=["./test_main.py", "./schemas.py"]
 )
