make provisioner lambda run in localstack and e2e tests run in lambda

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -117,7 +117,7 @@ services:
     image: grapl/graplctl:${TAG:-latest}
     build:
       context: .
-      dockerfile: ./src/python/Dockerfile
+      dockerfile: ./src/python/graplctl/graplctl.Dockerfile
 
   grapl-pulumi:
     image: grapl/grapl-local-pulumi:${TAG:-latest}
