--- a/pulumi/Pulumi.local-grapl.yaml
+++ b/pulumi/Pulumi.local-grapl.yaml
@@ -20,3 +20,4 @@ config:
   aws:skipRequestingAccountId: "true"
   grapl:MG_ALPHAS: dgraph.grapl.test:9080
   grapl:GRAPL_CDK_OPERATIONAL_ALARMS_EMAIL: "fake-ops-email@fake.domain"
+  grapl:GRAPL_API_HOST: api.grapl.test
