--- a/src/python/e2e-test-runner/src/BUILD
+++ b/src/python/e2e-test-runner/src/BUILD
@@ -1,5 +1,10 @@
+python_library(
+    sources=["*.py"]
+)
+
 python_awslambda(
     name="lambda",
     runtime="python3.7",
     handler="./main.py:main",
+    dependencies=["./test_main.py", "./schemas.py"]
 )
