--- a/test/docker-compose.e2e-tests.yml
+++ b/test/docker-compose.e2e-tests.yml
@@ -5,45 +5,77 @@ version: "3.8"
 services:
 
   grapl-e2e-tests:
-    image: grapl/grapl-e2e-tests-build:${TAG:-latest}
+    image: grapl/e2e-tests:${TAG:-latest}
     build:
-      context: ${PWD}/src
-      dockerfile: ./python/Dockerfile
-      target: grapl-e2e-tests-build
+      context: .
+      dockerfile: ./src/python/e2e-test-runner/e2e-test-runner.Dockerfile
     command: |
-      bash -c "
-        source venv/bin/activate &&
-        cd grapl_e2e_tests &&
-        python3 ./main.py
+      /bin/bash -c "
+          graplctl \
+              --grapl-region $AWS_REGION \
+              --grapl-deployment-name $DEPLOYMENT_NAME \
+              --grapl-version $DEPLOYMENT_NAME \
+              --aws-profile default \
+              upload analyzer \
+              --analyzer_main_py ./etc/local_grapl/suspicious_svchost/main.py && \
+          graplctl \
+              --grapl-region $AWS_REGION \
+              --grapl-deployment-name $DEPLOYMENT_NAME \
+              --grapl-version $DEPLOYMENT_NAME \
+              --aws-profile default \
+              upload analyzer \
+              --analyzer_main_py ./etc/local_grapl/unique_cmd_parent/main.py && \
+          graplctl \
+              --grapl-region $AWS_REGION \
+              --grapl-deployment-name $DEPLOYMENT_NAME \
+              --grapl-version $DEPLOYMENT_NAME \
+              --aws-profile default \
+              upload sysmon \
+              --logfile ./etc/sample_data/eventlog.xml && \
+          python -c 'import lambdex_handler; lambdex_handler.handler(None, None)'
       "
     volumes:
       - dynamodb_dump:/mnt/dynamodb_dump
       - ${PWD}/etc:/home/grapl/etc:ro
     environment:
-      - AWS_REGION
-      - DEPLOYMENT_NAME
-      - DEBUG_SERVICES=${DEBUG_SERVICES:-}
-      - DGRAPH_HOST
-      - DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT
-      - DUMP_ARTIFACTS=${DUMP_ARTIFACTS:-False}
-      - DYNAMODB_ACCESS_KEY_ID
-      - DYNAMODB_ACCESS_KEY_SECRET
-      - DYNAMODB_ENDPOINT
-      - GRAPL_API_HOST
-      - GRAPL_HTTP_FRONTEND_PORT
-      - GRAPL_GRAPHQL_HOST
-      - GRAPL_GRAPHQL_PORT
-      - GRAPL_MODEL_PLUGIN_DEPLOYER_HOST
-      - GRAPL_MODEL_PLUGIN_DEPLOYER_PORT
-      - GRAPL_LOG_LEVEL
-      - MG_ALPHAS
-      - S3_ACCESS_KEY_ID
-      - S3_ACCESS_KEY_SECRET
-      - S3_ENDPOINT
-      - SQS_ACCESS_KEY_ID
-      - SQS_ACCESS_KEY_SECRET
-      - SQS_ENDPOINT
-      - VSC_DEBUGGER_PORT=${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}
+      AWS_REGION: ${AWS_REGION}
+      DEPLOYMENT_NAME: ${DEPLOYMENT_NAME}
+      DEBUG_SERVICES: ${DEBUG_SERVICES:-}
+      GRAPL_LOG_LEVEL: ${GRAPL_LOG_LEVEL}
+      IS_LOCAL: "True"
+      S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
+      S3_ACCESS_KEY_SECRET: ${S3_ACCESS_KEY_SECRET}
+      S3_ENDPOINT: ${S3_ENDPOINT}
+      SQS_ACCESS_KEY_ID: ${SQS_ACCESS_KEY_ID}
+      SQS_ACCESS_KEY_SECRET: ${SQS_ACCESS_KEY_SECRET}
+      SQS_ENDPOINT: ${SQS_ENDPOINT}
+      SNS_ACCESS_KEY_ID: ${SNS_ACCESS_KEY_ID}
+      SNS_ACCESS_KEY_SECRET: ${SNS_ACCESS_KEY_SECRET}
+      SNS_ENDPOINT: ${SNS_ENDPOINT}
+      SSM_ACCESS_KEY_ID: ${SSM_ACCESS_KEY_ID}
+      SSM_ACCESS_KEY_SECRET: ${SSM_ACCESS_KEY_SECRET}
+      SSM_ENDPOINT: ${SSM_ENDPOINT}
+      SECRETSMANAGER_ACCESS_KEY_ID: ${SECRETSMANAGER_ACCESS_KEY_ID}
+      SECRETSMANAGER_ACCESS_KEY_SECRET: ${SECRETSMANAGER_ACCESS_KEY_SECRET}
+      SECRETSMANAGER_ENDPOINT: ${SECRETSMANAGER_ENDPOINT}
+      CLOUDWATCH_ACCESS_KEY_ID: ${CLOUDWATCH_ACCESS_KEY_ID}
+      CLOUDWATCH_ACCESS_KEY_SECRET: ${CLOUDWATCH_ACCESS_KEY_SECRET}
+      CLOUDWATCH_ENDPOINT: ${CLOUDWATCH_ENDPOINT}
+      LAMBDA_ACCESS_KEY_ID: ${LAMBDA_ACCESS_KEY_ID}
+      LAMBDA_ACCESS_KEY_SECRET: ${LAMBDA_ACCESS_KEY_SECRET}
+      LAMBDA_ENDPOINT: ${LAMBDA_ENDPOINT}
+      ROUTE53_ACCESS_KEY_ID: ${ROUTE53_ACCESS_KEY_ID}
+      ROUTE53_ACCESS_KEY_SECRET: ${ROUTE53_ACCESS_KEY_SECRET}
+      ROUTE53_ENDPOINT: ${ROUTE53_ENDPOINT}
+      VSC_DEBUGGER_PORT: ${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}
+      GRAPL_MODEL_PLUGIN_DEPLOYER_HOST: ${GRAPL_MODEL_PLUGIN_DEPLOYER_HOST}
+      GRAPL_MODEL_PLUGIN_DEPLOYER_PORT: ${GRAPL_MODEL_PLUGIN_DEPLOYER_PORT}
+      GRAPL_TEST_USER_NAME: "${DEPLOYMENT_NAME}-test-user"
+      MG_ALPHAS: ${MG_ALPHAS}
+      GRAPL_API_HOST: ${GRAPL_API_HOST}
+      GRAPL_HTTP_FRONTEND_PORT: ${GRAPL_HTTP_FRONTEND_PORT}
+      GRAPL_GRAPHQL_HOST: ${GRAPL_GRAPHQL_HOST}
+      GRAPL_GRAPHQL_PORT: ${GRAPL_GRAPHQL_PORT}
     ports:
       - ${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}:${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}
 
