--- a/pulumi/Pulumi.local-grapl.yaml
+++ b/pulumi/Pulumi.local-grapl.yaml
@@ -19,3 +19,4 @@ config:
   aws:skipCredentialsValidation: "true"
   aws:skipRequestingAccountId: "true"
   grapl:MG_ALPHAS: dgraph.grapl.test:9080
+  grapl:GRAPL_API_HOST: api.grapl.test
