copy in the mypy.ini

--- a/src/python/Dockerfile
+++ b/src/python/Dockerfile
@@ -25,6 +25,8 @@ USER grapl
 ENV USER=grapl
 WORKDIR /home/grapl
 
+COPY ./python/mypy.ini /home/grapl/mypy.ini
+
 RUN python3 -mvenv venv && \
     source venv/bin/activate && \
     pip install --upgrade pip && \
