--- a/src/rust/grapl-router-api/Cargo.toml
+++ b/src/rust/grapl-router-api/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "grapl-api-service"
+name = "grapl-router-api"
 version = "0.1.0"
 authors = ["grapl <andrea@graplsecurity.com>"]
 edition = "2018"
@@ -14,3 +14,6 @@ path = "src/main.rs"
 
 [dependencies]
 actix-web = "3.3.2"
+env_logger = "0.6"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
