--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,7 +104,7 @@ services:
       - IMAGE_NAME=localstack/localstack:latest
       - EDGE_PORT=${LOCALSTACK_PORT}
       - HOSTNAME_EXTERNAL=${LOCALSTACK_HOST}
-      - SERVICES=apigateway,dynamodb,ec2,events,iam,lambda,logs,route53,s3,secretsmanager,sns,sqs
+      - SERVICES=apigateway,dynamodb,ec2,events,iam,lambda,logs,s3,secretsmanager,sns,sqs
       - DEBUG=1
       # Once we put the lambdas behind the API gateway, overall test
       # time increased. Using the `docker` executor reliably takes at
