--- a/src/rust/grapl-utils/Cargo.toml
+++ b/src/rust/grapl-utils/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 [dependencies]
 async-trait = "0.1"
 tokio = { version = "1", features = ["time"] }
+futures = "0.3"
 rusoto_core = { version="0.46.0", default_features = false, features=["rustls"] }
 rusoto_dynamodb = { version="0.46", default_features = false, features=["rustls"] }
