--- a/src/rust/grapl-router-api/Cargo.toml
+++ b/src/rust/grapl-router-api/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 actix-web = "3.3.2"
 env_logger = "0.6"
 serde = {version = "1.0", features = ["derive"]}
-serde_json = "1.0"
 http = "0.1.19"
-reqwest = "0.11.3"
+reqwest = {version = "0.11.3", features = ["json"]}
+thiserror = "1.0.24"
+
