Skip MyPy for grapl_e2e_tests
Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/src/python/grapl_e2e_tests/BUILD
+++ b/src/python/grapl_e2e_tests/BUILD
@@ -1,6 +1,9 @@
-python_library()
+python_library(
+    skip_mypy=True
+)
 
 python_tests(
   name="tests",
-  sources=["**/*.py"]
+  sources=["**/*.py"],
+  skip_mypy=True
 )
