Skip MyPy for grapl-ux-router
Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/src/python/grapl-ux-router/BUILD
+++ b/src/python/grapl-ux-router/BUILD
@@ -1,6 +1,5 @@
-python_awslambda(
-    runtime="python3.7",
-    handler="src/grapl_ux_router.py:app"
+python_library(
+    skip_mypy=True
 )
 
 python_awslambda(
