Skip MyPy for graplctl
Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/src/python/graplctl/tests/BUILD
+++ b/src/python/graplctl/tests/BUILD
@@ -2,5 +2,10 @@ python_tests(
     dependencies=[
         "//etc/sample_data",
     ],
+    skip_mypy=True
 )
-python_library(name="tests_lib")
+
+python_library(
+    name="tests_lib",
+    skip_mypy=True
+)
