--- a/src/python/mypy.ini
+++ b/src/python/mypy.ini
@@ -6,3 +6,11 @@ disallow_untyped_defs = True
 
 [mypy-boto3]
 ignore_missing_imports = True
+
+# Don't type anything related to analzyerlib; MyPy can't handle it!
+[mypy-grapl_analyzerlib.*]
+ignore_missing_imports = True
+ignore_errors = True
+
+[mypy-pydgraph.*]
+ignore_missing_imports = True
