Reorganize module structure of grapl_ux_router
Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/src/python/grapl-ux-router/BUILD
+++ b/src/python/grapl-ux-router/BUILD
@@ -2,3 +2,9 @@ python_awslambda(
     runtime="python3.7",
     handler="src/grapl_ux_router.py:app"
 )
+
+python_awslambda(
+    name="lambda",
+    runtime="python3.7",
+    handler="grapl_ux_router.py:app"
+)
