Update Makefile for Pants typechecking
`make test-typecheck` now types everything, while `make
test-typecheck-docker` and `make test-typecheck-pants` carry out our
different typechecking schemes.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -108,7 +108,7 @@ steps:
   # TODO: Consider beefy queue
   - label: ":python::docker: Typechecking (:no_entry_sign::jeans:)"
     command:
-      - make test-typecheck
+      - make test-typecheck-docker
 
   # TODO: Consider beefy queue
   - label: ":typescript::docker: Unit Tests"
