--- a/src/python/graplctl/tests/BUILD
+++ b/src/python/graplctl/tests/BUILD
@@ -1,11 +1,9 @@
 python_tests(
     dependencies=[
         "//etc/sample_data",
-    ],
-    skip_mypy=True
+    ]
 )
 
 python_library(
-    name="tests_lib",
-    skip_mypy=True
+    name="tests_lib"
 )
