--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -4,12 +4,17 @@ botocore
 chalice==1.22.4
 click
 hypothesis
+mypy_boto3_cloudwatch
 mypy_boto3_dynamodb
+mypy_boto3_ec2
 mypy_boto3_lambda
+mypy_boto3_route53
 mypy_boto3_s3
 mypy_boto3_sagemaker
 mypy_boto3_secretsmanager
+mypy_boto3_sns
 mypy_boto3_sqs
+mypy_boto3_ssm
 protobuf>=3.12.1
 pulumi>=3.0.0,<4.0.0
 pulumi-aws>=4.0.0,<5.0.0
