Claim ownership of more files for @christophermaier
Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,24 @@
-EDITOR_SETUP.md @christophermaier
-src/rust/.cargo @christophermaier
-src/rust/bin @christophermaier
+/3rdparty/ @christophermaier
+/buf.yaml @christophermaier
+BUILD @christophermaier
+/.buildkite/ @christophermaier
+/build-support/ @christophermaier
+CHORES.md @christophermaier
+/debugger/ @christophermaier
+/docker-compose*.yml @christophermaier
+/Dockerfile.pulumi @christophermaier
+/EDITOR_SETUP.md @christophermaier
+/etc/install_buf.sh @christophermaier
+/.flake8 @christophermaier
+/.github/ @christophermaier
+/local-grapl.env @christophermaier
+/Makefile @christophermaier
+/pants @christophermaier
+/pants.ci.toml @christophermaier
+/pants-plugins/ @christophermaier
+/pants.toml @christophermaier
+/pulumi/ @christophermaier
+/pyproject.toml @christophermaier
+/.rustfmt.toml @christophermaier
+/src/rust/bin/ @christophermaier
+/src/rust/.cargo @christophermaier
