--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -1,5 +1,5 @@
 # Any Python dependencies used by our code should be declared here.
-boto3==1.17.71
+boto3
 botocore
 chalice==1.22.4
 # Chalice requires a Click in 7, <=8
