--- a/local-grapl.env
+++ b/local-grapl.env
@@ -140,3 +140,4 @@ RUST_LOG=ERROR
 ########################################################################
 MG_ALPHAS=${DGRAPH_HOST}:${DGRAPH_ALPHA_GRPC_EXTERNAL_PUBLIC_PORT}
 DEPLOYMENT_NAME=local-grapl
+GRAPL_TEST_USER_NAME=${DEPLOYMENT_NAME}-grapl-test-user
