--- a/pulumi/.gitignore
+++ b/pulumi/.gitignore
@@ -1,3 +1,3 @@
-# Assuming that you have set up a stack for your own AWS sandbox named
-# `${YOUR_NAME}-sandbox`, we'll ignore that stack.
-Pulumi.*-sandbox.yaml
+Don't ignore the local-grapl stack config, but do ignore any others.
+!Pulumi.local-grapl.yaml
+Pulumi.*.yaml
