fixes from local testing

--- a/src/python/e2e-test-runner/src/BUILD
+++ b/src/python/e2e-test-runner/src/BUILD
@@ -6,5 +6,5 @@ python_awslambda(
     name="lambda",
     runtime="python3.7",
     handler="./main.py:main",
-    dependencies=["./test_main.py"]
+    dependencies=["./test_main.py", "./schemas.py"]
 )
