--- a/test/docker-compose.e2e-tests.yml
+++ b/test/docker-compose.e2e-tests.yml
@@ -70,6 +70,7 @@ services:
       VSC_DEBUGGER_PORT: ${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}
       MG_ALPHAS: ${MG_ALPHAS}
       GRAPL_API_HOST: ${GRAPL_API_HOST}
+      GRAPL_HTTP_FRONTEND_PORT: ${GRAPL_HTTP_FRONTEND_PORT}
       GRAPL_TEST_USER_NAME: ${GRAPL_TEST_USER_NAME}
     ports:
       - ${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}:${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}
