--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -98,6 +98,7 @@ services:
       - DEPLOYMENT_NAME
       - UX_BUCKET_URL="ux_bucket_url"
       - GRAPL_API_HOST
+      - GRAPL_HTTP_FRONTEND_PORT
       - GRAPL_TEST_USER_NAME
       - SECRETSMANAGER_ACCESS_KEY_ID
       - SECRETSMANAGER_ACCESS_KEY_SECRET
@@ -138,12 +139,14 @@ services:
       '
     environment:
       - AWS_REGION
+      - IS_LOCAL=True
       - DEBUG_SERVICES=${DEBUG_SERVICES:-}
       - DEPLOYMENT_NAME
       - DYNAMODB_ENDPOINT
       - DYNAMODB_ACCESS_KEY_ID
       - DYNAMODB_ACCESS_KEY_SECRET
       - GRAPL_API_HOST
+      - GRAPL_HTTP_FRONTEND_PORT
       - GRAPL_TEST_USER_NAME
       - SECRETSMANAGER_ACCESS_KEY_ID
       - SECRETSMANAGER_ACCESS_KEY_SECRET
