--- a/src/rust/graph-mutation-service/Cargo.toml
+++ b/src/rust/graph-mutation-service/Cargo.toml
@@ -29,6 +29,7 @@ serde_json = "1"
 thiserror = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
 tonic = { version="0.4" }
+tonic-health = "0.3.1"
 tower = { version = "0.4" }
 tracing = "0.1.*"
 tracing-futures = "0.2.*"
