--- a/src/rust/grapl-router-api/Cargo.toml
+++ b/src/rust/grapl-router-api/Cargo.toml
@@ -13,10 +13,12 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3.3.2"
+#actix-web = "3.3.2"
 env_logger = "0.6"
 serde = {version = "1.0", features = ["derive"]}
 http = "0.1.19"
 reqwest = {version = "0.11.3", features = ["json"]}
 thiserror = "1.0.24"
-
+tracing-actix-web = "0.4.0-beta.1"
+tracing = "0.1"
+actix-web = "4.0.0-beta.6"
