updates for review comments

--- a/src/python/e2e-test-runner/e2e_test_runner/BUILD
+++ b/src/python/e2e-test-runner/e2e_test_runner/BUILD
@@ -5,6 +5,6 @@ python_library(
 python_awslambda(
     name="lambda",
     runtime="python3.7",
-    handler="./main.py:main",
+    handler="./main.py:lambda_handler",
     dependencies=["./test_main.py", "./schemas.py"]
 )
