--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,16 @@ x-common-variables:
   aws-region: &aws-region
     AWS_DEFAULT_REGION: ${AWS_REGION} # boto3 prefers this one
     AWS_REGION: ${AWS_REGION}
+  cloudwatch-env: &cloudwatch-env
+    CLOUDWATCH_ACCESS_KEY_ID: ${CLOUDWATCH_ACCESS_KEY_ID}
+    CLOUDWATCH_ACCESS_KEY_SECRET: ${CLOUDWATCH_ACCESS_KEY_SECRET}
+    CLOUDWATCH_ENDPOINT: ${CLOUDWATCH_ENDPOINT}
   dgraph-env: &dgraph-env
     MG_ALPHAS: ${MG_ALPHAS}
+  dynamodb-env: &dynamodb-env
+    DYNAMODB_ACCESS_KEY_ID: ${DYNAMODB_ACCESS_KEY_ID}
+    DYNAMODB_ACCESS_KEY_SECRET: ${DYNAMODB_ACCESS_KEY_SECRET}
+    DYNAMODB_ENDPOINT: ${DYNAMODB_ENDPOINT}
   # TODO: Ensure these are matched with what's in provision_local_identity_table.py
   dynamodb-mapping-tables: &dynamodb-mapping-tables
     ASSET_ID_MAPPINGS: ${DEPLOYMENT_NAME}-asset_id_mappings
@@ -27,51 +35,43 @@ x-common-variables:
     OUTBOUND_CONNECTION_HISTORY_TABLE: ${DEPLOYMENT_NAME}-outbound_connection_history_table
     PROCESS_HISTORY_TABLE: ${DEPLOYMENT_NAME}-process_history_table
     STATIC_MAPPING_TABLE: ${DEPLOYMENT_NAME}-static_mapping_table
-  log-level: &log-level
-    GRAPL_LOG_LEVEL: "${GRAPL_LOG_LEVEL:-ERROR}"
-    RUST_LOG: "${RUST_LOG:-ERROR}"
-  dynamodb-env: &dynamodb-env
-    DYNAMODB_ACCESS_KEY_ID: ${DYNAMODB_ACCESS_KEY_ID}
-    DYNAMODB_ACCESS_KEY_SECRET: ${DYNAMODB_ACCESS_KEY_SECRET}
-    DYNAMODB_ENDPOINT: ${DYNAMODB_ENDPOINT}
-  secretsmanager-env: &secretsmanager-env
-    SECRETSMANAGER_ACCESS_KEY_ID: ${SECRETSMANAGER_ACCESS_KEY_ID}
-    SECRETSMANAGER_ACCESS_KEY_SECRET: ${SECRETSMANAGER_ACCESS_KEY_SECRET}
-    SECRETSMANAGER_ENDPOINT: ${SECRETSMANAGER_ENDPOINT}
-  sqs-env: &sqs-env
-    SQS_ACCESS_KEY_ID: ${SQS_ACCESS_KEY_ID}
-    SQS_ACCESS_KEY_SECRET: ${SQS_ACCESS_KEY_SECRET}
-    SQS_ENDPOINT: ${SQS_ENDPOINT}
-  sns-env: &sns-env
-    SNS_ACCESS_KEY_ID: ${SNS_ACCESS_KEY_ID}
-    SNS_ACCESS_KEY_SECRET: ${SNS_ACCESS_KEY_SECRET}
-    SNS_ENDPOINT: ${SNS_ENDPOINT}
   ec2-env: &ec2-env
     EC2_ACCESS_KEY_ID: ${EC2_ACCESS_KEY_ID}
     EC2_ACCESS_KEY_SECRET: ${EC2_ACCESS_KEY_SECRET}
     EC2_ENDPOINT: ${EC2_ENDPOINT}
-  ssm-env: &ssm-env
-    SSM_ACCESS_KEY_ID: ${SSM_ACCESS_KEY_ID}
-    SSM_ACCESS_KEY_SECRET: ${SSM_ACCESS_KEY_SECRET}
-    SSM_ENDPOINT: ${SSM_ENDPOINT}
-  cloudwatch-env: &cloudwatch-env
-    CLOUDWATCH_ACCESS_KEY_ID: ${CLOUDWATCH_ACCESS_KEY_ID}
-    CLOUDWATCH_ACCESS_KEY_SECRET: ${CLOUDWATCH_ACCESS_KEY_SECRET}
-    CLOUDWATCH_ENDPOINT: ${CLOUDWATCH_ENDPOINT}
-  route53-env: &route53-env
-    ROUTE53_ACCESS_KEY_ID: ${ROUTE53_ACCESS_KEY_ID}
-    ROUTE53_ACCESS_KEY_SECRET: ${ROUTE53_ACCESS_KEY_SECRET}
-    ROUTE53_ENDPOINT: ${ROUTE53_ENDPOINT}
   lambda-env: &lambda-env
     LAMBDA_ACCESS_KEY_ID: ${LAMBDA_ACCESS_KEY_ID}
     LAMBDA_ACCESS_KEY_SECRET: ${LAMBDA_ACCESS_KEY_SECRET}
     LAMBDA_ENDPOINT: ${LAMBDA_ENDPOINT}
+  log-level: &log-level
+    GRAPL_LOG_LEVEL: "${GRAPL_LOG_LEVEL:-ERROR}"
+    RUST_LOG: "${RUST_LOG:-ERROR}"
+  route53-env: &route53-env
+    ROUTE53_ACCESS_KEY_ID: ${ROUTE53_ACCESS_KEY_ID}
+    ROUTE53_ACCESS_KEY_SECRET: ${ROUTE53_ACCESS_KEY_SECRET}
+    ROUTE53_ENDPOINT: ${ROUTE53_ENDPOINT}
+  rust-backtrace: &rust-backtrace
+    RUST_BACKTRACE: ${RUST_BACKTRACE}
   s3-env: &s3-env
     S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
     S3_ACCESS_KEY_SECRET: ${S3_ACCESS_KEY_SECRET}
     S3_ENDPOINT: ${S3_ENDPOINT}
-  rust-backtrace: &rust-backtrace
-    RUST_BACKTRACE: ${RUST_BACKTRACE}
+  secretsmanager-env: &secretsmanager-env
+    SECRETSMANAGER_ACCESS_KEY_ID: ${SECRETSMANAGER_ACCESS_KEY_ID}
+    SECRETSMANAGER_ACCESS_KEY_SECRET: ${SECRETSMANAGER_ACCESS_KEY_SECRET}
+    SECRETSMANAGER_ENDPOINT: ${SECRETSMANAGER_ENDPOINT}
+  sns-env: &sns-env
+    SNS_ACCESS_KEY_ID: ${SNS_ACCESS_KEY_ID}
+    SNS_ACCESS_KEY_SECRET: ${SNS_ACCESS_KEY_SECRET}
+    SNS_ENDPOINT: ${SNS_ENDPOINT}
+  sqs-env: &sqs-env
+    SQS_ACCESS_KEY_ID: ${SQS_ACCESS_KEY_ID}
+    SQS_ACCESS_KEY_SECRET: ${SQS_ACCESS_KEY_SECRET}
+    SQS_ENDPOINT: ${SQS_ENDPOINT}
+  ssm-env: &ssm-env
+    SSM_ACCESS_KEY_ID: ${SSM_ACCESS_KEY_ID}
+    SSM_ACCESS_KEY_SECRET: ${SSM_ACCESS_KEY_SECRET}
+    SSM_ENDPOINT: ${SSM_ENDPOINT}
 
 services:
   ########################################################################
@@ -184,7 +184,7 @@ services:
       <<: *sqs-env
       <<: *rust-backtrace
     depends_on:
-      grapl-provision:
+      provisioner:
         condition: service_completed_successfully
       localstack:
         condition: service_healthy
@@ -207,7 +207,7 @@ services:
       <<: *sqs-env
       <<: *rust-backtrace
     depends_on:
-      grapl-provision:
+      provisioner:
         condition: service_completed_successfully
       localstack:
         condition: service_healthy
@@ -231,7 +231,7 @@ services:
       <<: *rust-backtrace
     tty: false
     depends_on:
-      grapl-provision:
+      provisioner:
         condition: service_completed_successfully
       localstack:
         condition: service_healthy
@@ -255,7 +255,7 @@ services:
       <<: *rust-backtrace
     tty: false
     depends_on:
-      grapl-provision:
+      provisioner:
         condition: service_completed_successfully
       localstack:
         condition: service_healthy
@@ -282,7 +282,7 @@ services:
     depends_on:
       dgraph:
         condition: service_started
-      grapl-provision:
+      provisioner:
         condition: service_completed_successfully
       localstack:
         condition: service_healthy
@@ -336,7 +336,7 @@ services:
     depends_on:
       dgraph:
         condition: service_started
-      grapl-provision:
+      provisioner:
         condition: service_completed_successfully
       localstack:
         condition: service_healthy
@@ -369,7 +369,7 @@ services:
         condition: service_started
       localstack:
         condition: service_healthy
-      grapl-provision:
+      provisioner:
         condition: service_completed_successfully
     ports:
       - 127.0.0.1:${GRAPL_MODEL_PLUGIN_DEPLOYER_PORT}:${GRAPL_MODEL_PLUGIN_DEPLOYER_PORT}
@@ -426,7 +426,7 @@ services:
       <<: *aws-region
       <<: *s3-env
     depends_on:
-      grapl-provision:
+      provisioner:
         condition: service_completed_successfully
 
   grapl-graphql-endpoint:
@@ -450,7 +450,7 @@ services:
         condition: service_started
       localstack:
         condition: service_healthy
-      grapl-provision:
+      provisioner:
         condition: service_completed_successfully
     ports:
       - 127.0.0.1:${GRAPL_GRAPHQL_PORT}:${GRAPL_GRAPHQL_PORT}
@@ -508,7 +508,7 @@ services:
       localstack:
         condition: service_healthy
 
-  grapl-provision:
+  provisioner:
     image: grapl/graplctl:${TAG:-latest}
     command: |
       /bin/bash -c "
