Add CODEOWNERS tests to CI
Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,6 +10,16 @@ env:
 
 steps:
 
+  - label: ":github: Validate CODEOWNERS"
+    command: ".buildkite/scripts/validate_codeowners.sh"
+    plugins:
+      - docker#v3.8.0:
+          image: "node"
+          entrypoint: "bash"
+    soft_fail:
+      # Allow failures of "unloved" check
+      - exit_status: 2
+
   - label: ":large_blue_square::lint-roller: Lint Protobuf"
     command:
       - buf lint --verbose
