--- a/src/rust/grapl-router-api/Cargo.toml
+++ b/src/rust/grapl-router-api/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 env_logger = "0.6"
 serde = {version = "1.0", features = ["derive"]}
 http = "0.1.19"
-reqwest = {version = "0.11.3", features = ["json"]}
+reqwest = {version = "0.11.3", default-features=false, features = ["json", "rustls-tls"]}
 thiserror = "1.0.24"
 tracing-actix-web = "0.4.0-beta.1"
 tracing = "0.1"
