Push up some infra changes

--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://127.0.0.1:1234",
+  "homepage": "prod/",
   "dependencies": {
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
