--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -18,7 +18,8 @@ mypy_boto3_sqs
 mypy_boto3_ssm
 protobuf>=3.12.1
 pulumi>=3.0.0,<4.0.0
-pulumi-aws>=4.0.0,<5.0.0
+# 4.7.0 is broken: https://github.com/pulumi/pulumi-aws/issues/1519
+pulumi-aws>=4.0.0,<5.0.0,<4.7.0
 pulumi_docker
 pulumi_random
 pydgraph
