--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -98,6 +98,16 @@ services:
       - GRAPL_API_HOST
       - GRAPL_HTTP_FRONTEND_PORT
 
+  kafka-metrics-exporter-integration-tests:
+    image: grapl/kafka-metrics-exporter-test:${TAG:-latest}
+    build:
+      context: ${PWD}/src
+      dockerfile: rust/Dockerfile
+      target: build-test
+      args:
+        - RUST_BUILD=test-integration
+    command: cargo test --features kafka-metrics-exporter/integration --test '*'
+
   # TODO: Re-enable these tests after the following issues are resolved:
   # - https://github.com/grapl-security/issue-tracker/issues/385
   # - https://github.com/grapl-security/issue-tracker/issues/386
