--- a/src/python/provisioner/provisioner/BUILD
+++ b/src/python/provisioner/provisioner/BUILD
@@ -5,6 +5,5 @@ python_library(
 python_awslambda(
     name="lambda",
     runtime="python3.7",
-    handler="./main.py:main",
-    dependencies=["./test_main.py", "./schemas.py"]
+    handler="./app.py:provision",
 )
